--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-native-notification": "^1.1.1",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vue-toastification": "^1.7.6",
     "vuetify": "^2.2.11"
   },
