--- a/package.json
+++ b/package.json
@@ -6,36 +6,34 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lintserve": "vue-cli-service lint; vue-cli-service serve",
-    "lintserve:dev": "vue-cli-service lint; vue-cli-service build; serve -s dist -l 8090"
+    "serve:mock": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert /Users/hkamran/Desktop/Desktop/Projects/Sites/certificates/server.crt --ssl-key /Users/hkamran/Desktop/Desktop/Projects/Sites/certificates/server.key"
   },
   "dependencies": {
-    "@mdi/font": "^3.6.95",
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
+    "@mdi/font": "^5.8.55",
+    "core-js": "^3.8.2",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-native-notification": "^1.1.1",
-    "vue-router": "^3.2.0",
-    "vue-toasted": "^1.1.28",
-    "vue-toastification": "^1.7.6",
-    "vuetify": "^2.2.11"
+    "vue-router": "^3.4.9",
+    "vue-toastification": "^1.7.8",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-pwa": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
+    "vue-cli-plugin-vuetify": "^2.0.9",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
