Fix preferences opening, add force update code to service worker

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^5.8.55",
+    "clear-cache": "^1.0.1",
     "core-js": "^3.8.2",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
