Switch to JSON object for schedule in schedules.json, add the beginning of new schedule functionality (#5)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,11 @@
 {
-    "include": [
-        "./src/**/*"
-    ]
+    "compilerOptions": {
+        "target": "es2015",
+        "module": "esnext",
+        "baseUrl": "./",
+        "paths": {
+            "@/*": ["components/*"]
+        }
+    },
+    "include": ["src/**/*.vue", "src/**/*.js"]
 }
