--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "2.2.1",
+    "version": "2.2.2-edge.1",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -9,6 +9,8 @@
         "serve:mock": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
     },
     "dependencies": {
+        "@sentry/tracing": "^6.2.3",
+        "@sentry/vue": "^6.2.3",
         "core-js": "^3.8.2",
         "register-service-worker": "^1.7.2",
         "vue": "^2.6.11",
