--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "schedules",
-    "version": "2.2.2-edge.2",
+    "version": "2.2.2-edge.3",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build": "cp src/schedules.json public/schedules.json; vue-cli-service build",
+        "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
         "lint": "vue-cli-service lint",
         "serve:mock": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
     },
@@ -20,6 +20,7 @@
         "vuetify": "^2.4.0"
     },
     "devDependencies": {
+        "@mdi/js": "^5.9.55",
         "@vue/cli-plugin-babel": "^4.5.9",
         "@vue/cli-plugin-eslint": "^4.5.9",
         "@vue/cli-plugin-pwa": "^4.5.9",
