--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -22,5 +22,19 @@
         "Fix Umami analytics activation",
         "Fix duplicate divider issue with feature coming soon (currently in alpha)"
     ],
-    "2.2.2 (Edge-2)": ["Add Sentry.io tracking"]
+    "2.2.2 (Edge-3)": [
+        "Add Sentry.io error and performance monitoring",
+        "Remove the AUHSD Distance Learning schedule",
+        "Reverse the order of the What's New panel",
+        "Change the expansion panel look from accordion",
+        "Automatically open latest version's what's new",
+        "Change What's New to Release Notes",
+        "Add tooltips to the buttons on the schedule page",
+        "Make the space occupied by the theme toggle button smaller",
+        "Add caching headers",
+        "Switch to @mdi/js rather than the stylesheet for improved performance",
+        "Remove the new schedule button from edge",
+        "Switch the AUHSD schedules' icons to the outlined version",
+        "Switch to modern build system (module + nomodule)"
+    ]
 }
