--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "2.2.2-edge.3",
+    "version": "2.3.0-edge.4",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -36,7 +36,8 @@
         "sass-loader": "^10.1.0",
         "vue-cli-plugin-vuetify": "^2.0.9",
         "vue-template-compiler": "^2.6.11",
-        "vuetify-loader": "^1.3.0"
+        "vuetify-loader": "^1.3.0",
+        "webpack-bundle-analyzer": "^4.4.0"
     },
     "eslintConfig": {
         "root": true,
