--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@sentry/tracing": "^6.2.3",
         "@sentry/vue": "^6.2.3",
+        "@vue/preload-webpack-plugin": "^1.1.2",
         "core-js": "^3.8.2",
         "register-service-worker": "^1.7.2",
         "vue": "^2.6.11",
