--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
+        "report": "vue-cli-service build --report",
         "lint": "vue-cli-service lint",
         "serve:mock": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
     },
@@ -13,6 +14,7 @@
         "@sentry/vue": "^6.2.3",
         "@vue/preload-webpack-plugin": "^1.1.2",
         "core-js": "^3.8.2",
+        "newrelic": "^7.3.1",
         "register-service-worker": "^1.7.2",
         "vue": "^2.6.11",
         "vue-native-notification": "^1.1.1",
