--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,14 +1,10 @@
 version = 1
-
-exclude_patterns = [
-    "jsconfig.json",
-    "*.config.js"
-]
+exclude_patterns = ["jsconfig.json", "*.config.js"]
 
 [[analyzers]]
 name = "javascript"
 enabled = true
 
-  [analyzers.meta]
-  plugins = ["vue"]
-  environment = ["browser"]
+[analyzers.meta]
+plugins = ["vue"]
+environment = ["browser"]
