--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -40,6 +40,7 @@
         "Add favicons",
         "Add Open Graph and Twitter social meta tags",
         "Fix CSP policy for the service worker",
-        "Improve performance"
+        "Improve performance",
+        "Add icon and badge to notifications"
     ]
 }
