--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
-        "report": "vue-cli-service build --report",
+        "build:report": "vue-cli-service build --report",
         "lint": "vue-cli-service lint",
-        "serve:mock": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
+        "serve:ssl": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
     },
     "dependencies": {
         "@sentry/tracing": "^6.2.3",
