--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -22,7 +22,7 @@
         "Fix Umami analytics activation",
         "Fix duplicate divider issue with feature coming soon (currently in alpha)"
     ],
-    "2.3.0 (Edge-9)": [
+    "2.3.0 (Edge-10)": [
         "Add Sentry.io error and performance monitoring",
         "Remove the AUHSD Distance Learning schedule",
         "Reverse the order of the What's New panel",
@@ -41,6 +41,10 @@
         "Add Open Graph and Twitter social meta tags",
         "Fix CSP policy for the service worker",
         "Improve performance",
-        "Add icon and badge to notifications"
+        "Add icon and badge to notifications",
+        "Add a close button to the timetable",
+        "Change \"Intervals\" to \"Time Remaining\" in the notification settings",
+        "Fix the time remaining notifications naming",
+        "Move notification settings to separate dialogs"
     ]
 }
