--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "schedules",
-    "version": "2.3.0-edge.10",
+    "version": "2.3.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
+        "serve:ssl": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH",
         "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
         "build:report": "vue-cli-service build --report",
-        "lint": "vue-cli-service lint",
-        "serve:ssl": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH"
+        "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "@sentry/tracing": "^6.2.3",
