--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -22,7 +22,7 @@
         "Fix Umami analytics activation",
         "Fix duplicate divider issue with feature coming soon (currently in alpha)"
     ],
-    "2.3.0 (Edge-10)": [
+    "2.3.0": [
         "Add Sentry.io error and performance monitoring",
         "Remove the AUHSD Distance Learning schedule",
         "Reverse the order of the What's New panel",
@@ -43,7 +43,7 @@
         "Improve performance",
         "Add icon and badge to notifications",
         "Add a close button to the timetable",
-        "Change \"Intervals\" to \"Time Remaining\" in the notification settings",
+        "Change \"Intervals\" to \"Time Remaining\" in notification settings",
         "Fix the time remaining notifications naming",
         "Move notification settings to separate dialogs"
     ]
