--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -46,5 +46,6 @@
         "Change \"Intervals\" to \"Time Remaining\" in notification settings",
         "Fix the time remaining notifications naming",
         "Move notification settings to separate dialogs"
-    ]
+    ],
+    "2.3.1 (Edge-1)": ["Change Umami domain to unisontech.org"]
 }
