--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "2.3.1-edge.1",
+    "version": "2.3.1-edge.2",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -21,14 +21,15 @@
         "vuetify": "^2.4.0"
     },
     "devDependencies": {
-        "@vue/preload-webpack-plugin": "^1.1.2",
         "@mdi/js": "^5.9.55",
+        "@sentry/webpack-plugin": "^1.15.1",
         "@vue/cli-plugin-babel": "^4.5.9",
         "@vue/cli-plugin-eslint": "^4.5.9",
         "@vue/cli-plugin-pwa": "^4.5.9",
         "@vue/cli-plugin-router": "^4.5.9",
         "@vue/cli-service": "^4.5.9",
         "@vue/eslint-config-prettier": "^6.0.0",
+        "@vue/preload-webpack-plugin": "^1.1.2",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.3.1",
