--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -47,5 +47,8 @@
         "Fix the time remaining notifications naming",
         "Move notification settings to separate dialogs"
     ],
-    "2.3.1 (Edge-1)": ["Change Umami domain to unisontech.org"]
+    "2.3.1 (Edge-2)": [
+        "Change Umami domain to unisontech.org",
+        "Add source maps with Sentry for enhanced error logging"
+    ]
 }
