--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "2.3.1-edge.5",
+    "version": "2.3.1-edge.6",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -14,6 +14,7 @@
         "@sentry/vue": "^6.2.3",
         "core-js": "^3.8.2",
         "register-service-worker": "^1.7.2",
+        "utds-component-library": "^1.0.1",
         "vue": "^2.6.11",
         "vue-native-notification": "^1.1.1",
         "vue-router": "^3.4.9",
@@ -40,30 +41,5 @@
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.3.0",
         "webpack-bundle-analyzer": "^4.4.0"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended",
-            "@vue/prettier"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
-    },
-    "prettier": {
-        "tabWidth": 4,
-        "singleQuote": false
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "last 2 Chrome versions",
-        "not dead"
-    ]
+    }
 }
