--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -47,12 +47,13 @@
         "Fix the time remaining notifications naming",
         "Move notification settings to separate dialogs"
     ],
-    "2.3.1 (Edge-5)": [
+    "2.3.1 (Edge-6)": [
         "Change Umami domain to unisontech.org",
         "Add source maps with Sentry for enhanced error logging",
         "Switch to the UTDS header",
         "Add day override (issue #66)",
         "Make the day override persistent",
-        "Dynamically generate the meta descriptive tags"
+        "Dynamically generate the meta descriptive tags",
+        "Add twenty-four hour time switch"
     ]
 }
