--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
     "name": "schedules",
-    "version": "2.3.1-edge.6",
+    "version": "2.4.0-edge.0",
     "private": true,
     "scripts": {
+        "lint": "vue-cli-service lint",
         "serve": "vue-cli-service serve",
-        "serve:ssl": "vue-cli-service build; serve -s dist -l 8090 --ssl-cert $SSL_CERTIFICATE_PATH --ssl-key $SSL_KEY_PATH",
         "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
-        "build:report": "vue-cli-service build --report",
-        "lint": "vue-cli-service lint"
+        "build:report": "vue-cli-service build --report"
     },
     "dependencies": {
-        "@sentry/tracing": "^6.2.3",
-        "@sentry/vue": "^6.2.3",
+        "@sentry/tracing": "^6.7.1",
+        "@sentry/vue": "^6.7.1",
         "core-js": "^3.8.2",
         "register-service-worker": "^1.7.2",
-        "utds-component-library": "^1.0.1",
+        "utds-component-library": "^1.0.2",
         "vue": "^2.6.11",
-        "vue-native-notification": "^1.1.1",
         "vue-router": "^3.4.9",
         "vue-toastification": "^1.7.8",
         "vuetify": "^2.4.0"
     },
     "devDependencies": {
         "@mdi/js": "^5.9.55",
+        "@typescript-eslint/eslint-plugin": "^2.33.0",
+        "@typescript-eslint/parser": "^2.33.0",
         "@vue/cli-plugin-babel": "^4.5.9",
         "@vue/cli-plugin-eslint": "^4.5.9",
         "@vue/cli-plugin-pwa": "^4.5.9",
         "@vue/cli-plugin-router": "^4.5.9",
+        "@vue/cli-plugin-typescript": "~4.5.0",
         "@vue/cli-service": "^4.5.9",
         "@vue/eslint-config-prettier": "^6.0.0",
+        "@vue/eslint-config-typescript": "^5.0.2",
         "@vue/preload-webpack-plugin": "^1.1.2",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
@@ -37,6 +39,7 @@
         "prettier": "^1.19.1",
         "sass": "^1.32.0",
         "sass-loader": "^10.1.0",
+        "typescript": "~4.1.5",
         "vue-cli-plugin-vuetify": "^2.0.9",
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.3.0",
