--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "paths": {
             "@/*": ["src/*"]
         },
-        "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+        "lib": ["esnext", "dom", "dom.iterable", "scripthost", "WebWorker"]
     },
     "include": [
         "src/**/*.ts",
