--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,5 +1,5 @@
 version = 1
-exclude_patterns = ["jsconfig.json", "*.config.js"]
+exclude_patterns = ["jsconfig.json", "tsconfig.json", "*.config.js"]
 
 [[analyzers]]
 name = "javascript"
