--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,6 @@
         },
         "lib": ["esnext", "dom", "dom.iterable", "scripthost", "WebWorker"]
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx",
-        "src/**/*.vue",
-        "tests/**/*.ts",
-        "tests/**/*.tsx"
-    ],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
     "exclude": ["node_modules", "src/service-worker.js"]
 }
