Switch to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,42 @@
+# Headers
+[[headers]]
+for = "/*"
+
+[headers.value]
+Cache-Control = "public, max-age=2592000"
+X-Frame-Options = "DENY"
+X-XSS-Protection = "1; mode=block"
+X-Content-Type-Options = "nosniff"
+Content-Security-Policy = "default-src 'self' 'unsafe-inline' https://umami-sepia.vercel.app https://umami.unisontech.org https://fonts.gstatic.com; connect-src 'self' https://umami-sepia.vercel.app https://umami.unisontech.org https://*.sentry.io https://pastebin.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://umami-sepia.vercel.app https://umami.unisontech.org https://storage.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; report-uri https://hkamran.report-uri.com/r/d/csp/enforce; report-to default"
+Referrer-Policy = "strict-origin-when-cross-origin"
+Report-To = '''{"group":"default","max_age":31536000,"endpoints":[{"url":"https://hkamran.report-uri.com/a/d/g"}],"include_subdomains":true}'''
+    NEL= '''{"report_to":"default","max_age":31536000,"include_subdomains":true}'''
+    Expect-CT= '''max-age=0, report-uri="https://hkamran.report-uri.com/r/d/ct/enforce"'''
+Access-Control-Allow-Origin = "*"
+
+# Redirects
+[[redirects]]
+from = "/robots.txt"
+to = "/robots.txt"
+status = 200
+
+[[redirects]]
+from = "/schedules.json"
+to = "/schedules.json"
+status = 200
+
+[[redirects]]
+from = "/cors/*"
+to = ":splat"
+status = 200
+force = true
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
+# Plugins
 [[plugins]]
 package = "@sentry/netlify-build-plugin"
 
