--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "3.0.0-edge.5",
+    "version": "3.0.0-edge.6",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -39,6 +39,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-vue": "^6.2.2",
         "prettier": "^1.19.1",
+        "raw-loader": "^4.0.2",
         "sass": "^1.32.0",
         "sass-loader": "^10.1.0",
         "typescript": "~4.1.5",
