--- a/netlify.toml
+++ b/netlify.toml
@@ -26,6 +26,16 @@ to = "/schedules.json"
 status = 200
 
 [[redirects]]
+from = "/precache-manifest.*.js"
+to = "/precache-manifest.:splat.js"
+status = 200
+
+[[redirects]]
+from = "/js/*.js.map"
+to = "/js/:splat.js.map"
+status = 200
+
+[[redirects]]
 from = "/cors/*"
 to = ":splat"
 status = 200
@@ -41,4 +51,4 @@ status = 200
 package = "@sentry/netlify-build-plugin"
 
 [plugins.inputs]
-sentryRelease = "3.0.0-edge.6"
+sentryRelease = "3.0.0-edge.7"
