--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "3.0.0-edge.6",
+    "version": "3.0.0-edge.7",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -34,15 +34,18 @@
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^5.0.2",
         "@vue/preload-webpack-plugin": "^1.1.2",
+        "axe-core": "^4.3.2",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-vue": "^6.2.2",
+        "eslint-plugin-vuejs-accessibility": "^0.7.1",
         "prettier": "^1.19.1",
         "raw-loader": "^4.0.2",
         "sass": "^1.32.0",
         "sass-loader": "^10.1.0",
         "typescript": "~4.1.5",
+        "vue-axe": "^2.4.4",
         "vue-cli-plugin-vuetify": "^2.0.9",
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.3.0",
