--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -47,13 +47,14 @@
         "Fix the time remaining notifications naming",
         "Move notification settings to separate dialogs"
     ],
-    "2.3.1 (Edge-6)": [
+    "2.3.1 (Edge-7)": [
         "Change Umami domain to unisontech.org",
         "Add source maps with Sentry for enhanced error logging",
         "Switch to the UTDS header",
         "Add day override (issue #66)",
         "Make the day override persistent",
         "Dynamically generate the meta descriptive tags",
-        "Add twenty-four hour time switch"
+        "Add twenty-four hour time switch",
+        "Fix the AUHSD Standard schedule's Wednesday and Friday start times"
     ]
 }
