--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern; ls dist | grep precache",
-        "test:unit": "vue-cli-service test:unit",
+        "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern; ls dist | grep precache; cat dist/service-worker.js | head -4",
         "lint": "vue-cli-service lint",
         "build:report": "vue-cli-service build --report"
     },
@@ -14,6 +13,7 @@
         "@sentry/vue": "^6.11.0",
         "@vue/composition-api": "^1.0.0-rc.13",
         "core-js": "^3.8.2",
+        "marked": "^3.0.0",
         "register-service-worker": "^1.7.2",
         "utds-component-library": "^1.0.8",
         "vue": "^2.6.11",
