--- a/package.json
+++ b/package.json
@@ -1,55 +1,59 @@
 {
-    "name": "schedules",
-    "version": "3.0.0-edge.10",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
-        "lint": "vue-cli-service lint",
-        "build:validate-sw": "npm run build; ls dist | grep precache; cat dist/service-worker.js | head -4",
-        "build:report": "vue-cli-service build --report"
-    },
-    "dependencies": {
-        "@sentry/tracing": "^6.11.0",
-        "@sentry/vue": "^6.11.0",
-        "@vue/composition-api": "^1.0.0-rc.13",
-        "core-js": "^3.8.2",
-        "marked": "^3.0.0",
-        "register-service-worker": "^1.7.2",
-        "utds-component-library": "^1.0.8",
-        "vue": "^2.6.11",
-        "vue-router": "^3.4.9",
-        "vue-toastification": "^1.7.8",
-        "vuetify": "^2.4.0"
-    },
-    "devDependencies": {
-        "@mdi/js": "^5.9.55",
-        "@typescript-eslint/eslint-plugin": "^2.33.0",
-        "@typescript-eslint/parser": "^2.33.0",
-        "@vue/cli-plugin-babel": "^4.5.9",
-        "@vue/cli-plugin-eslint": "^4.5.9",
-        "@vue/cli-plugin-pwa": "^4.5.9",
-        "@vue/cli-plugin-router": "^4.5.9",
-        "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-service": "^4.5.9",
-        "@vue/eslint-config-prettier": "^6.0.0",
-        "@vue/eslint-config-typescript": "^5.0.2",
-        "@vue/preload-webpack-plugin": "^1.1.2",
-        "axe-core": "^4.3.2",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "eslint-plugin-vuejs-accessibility": "^0.7.1",
-        "prettier": "^1.19.1",
-        "raw-loader": "^4.0.2",
-        "sass": "^1.32.0",
-        "sass-loader": "^10.1.0",
-        "typescript": "~4.1.5",
-        "vue-axe": "^2.4.4",
-        "vue-cli-plugin-vuetify": "^2.0.9",
-        "vue-template-compiler": "^2.6.11",
-        "vuetify-loader": "^1.3.0",
-        "webpack-bundle-analyzer": "^4.4.0"
-    }
+  "name": "schedules",
+  "version": "3.0.0-edge.10",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "cp src/schedules.json public/schedules.json; vue-cli-service build --modern",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "build:report": "vue-cli-service build --report",
+    "build:validate-sw": "npm run build; ls dist | grep precache; cat dist/service-worker.js | head -4"
+  },
+  "dependencies": {
+    "@sentry/tracing": "^6.11.0",
+    "@sentry/vue": "^6.11.0",
+    "@vue/composition-api": "^1.0.0-rc.13",
+    "core-js": "^3.8.2",
+    "marked": "^3.0.0",
+    "register-service-worker": "^1.7.2",
+    "utds-component-library": "^1.0.8",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
+    "vue-toastification": "^1.7.8",
+    "vuetify": "^2.4.0"
+  },
+  "devDependencies": {
+    "@mdi/js": "^5.9.55",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-pwa": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/preload-webpack-plugin": "^1.1.2",
+    "@vue/test-utils": "^1.0.3",
+    "axe-core": "^4.3.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vuejs-accessibility": "^0.7.1",
+    "prettier": "^1.19.1",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
+    "typescript": "~4.1.5",
+    "vue-axe": "^2.4.4",
+    "vue-cli-plugin-vuetify": "^2.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0",
+    "webpack-bundle-analyzer": "^4.4.0"
+  }
 }
