Change `localStorage.delete()` to `localStorage.removeItem()`

--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -106,7 +106,8 @@
             "Fix help center spacing",
             "Fix help center glitches",
             "Add conversion code (for Schedules 2 to Schedules 3)",
-            "Add legal section to the about dialog"
+            "Add legal section to the about dialog",
+            "Fix the conversion code"
         ]
     }
 }
