--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -128,5 +128,9 @@
             "Fix bug with schedule icon",
             "Fix spelling mistakes"
         ]
+    },
+    "3.0.1": {
+        "releaseDate": "2021-12-07",
+        "changelog": ["Add the AUHSD Finals schedule"]
     }
 }
