--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -136,5 +136,9 @@
     "3.0.2": {
         "releaseDate": "2022-01-04",
         "changelog": ["Remove the AUHSD Finals schedule"]
+    },
+    "3.0.3": {
+        "releaseDate": "2022-01-10",
+        "changelog": ["Add the College Park High School schedule"]
     }
 }
