--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -141,11 +141,14 @@
         "releaseDate": "2022-01-10",
         "changelog": ["Add the College Park High School schedule"]
     },
-    "3.1.0-edge.1": {
-        "releaseDate": "2022-01-11",
+    "3.1.0-edge.2": {
+        "releaseDate": "2022-02-15",
         "changelog": [
             "Add off days to all schedules",
-            "Restrict period name editing (disallows editing passing periods, break/lunch periods, etc.)"
+            "Restrict period name editing (disallows editing passing periods, break/lunch periods, etc.)",
+            "Switch the save button to a check in the notification and period name editing dialogs",
+            "Update edge alert message on the homepage",
+            "Rename the \"structures\" folder to \"models\""
         ]
     }
 }
